2012-05-23
* fix in GUI for fifo files

2012-05-22
* add 'debug' statement for helping debugging
* make location of HTML files for viewer more configurable. This needs more
work.
* htmldir can now be set on the fly by loading a new configuration
* tag and release 8.0

2012-05-21
* extra sanity checks for BAT_REPORTDIR
* add wrapper code for scanning Minix v1 file systems
* add configuration for scanning Minix v1 file systems
* pass blacklists to forges and licenses checks

2012-05-20
* add first version of minix unpacker to bat-extratools

2012-05-15
* files can have multiple symbols in the file tree, so make it easier to add
more symbols and decorate the file tree
* sort file tree
* decorate Android files in file tree
* big file fixes (finally!) for cramfs and cab unpacking

2012-05-14
* split data dump method, so it can be reused in the GUI more easily
* save data from scan in GUI
* rename "ranking" dir to "filereports", since it is far more accurate
* keep focus on selected file after applying filters
* keep data in tabs if selected file has not changed. Especially if there are
lots of matches, or large files in advanced mode this will save unnecessary
waiting.
* gzip unique html reports to decrease unpacking time in GUI + update GUI
* select scans from GUI

2012-05-13
* load scan configuration via the menu too
* display tags in GUI
* portability fixes, add stubs for scanning directly from interface
* launch scans via interface and display results in interface. Still to be
added: saving results, plus better filtering of scans

2012-05-12
* don't show scanning menu for non-Linux systems

2012-05-11
* cut more data from scandata.pickle that is not used in the GUI
* add very conservative tagger for GIF files
* add filter to hide (seemingly) empty directories
* portability fixes in batgui
* add list of scans from configuration file (if specified) to checkbox menu

2012-05-10
* move bruteforce scanning functionality to separate file in 'bat'